tests/spec/emit/snapshots/struct_with_option_omitempty.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[json(omitempty)]
  struct User {
    name: string,
    email: Option<string>,
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type User struct {
	Name  string                 `json:"name,omitempty"`
	Email lisette.Option[string] `json:"email,omitzero"`
}
