tests/spec/emit/snapshots/third_party_typed_constant_domain_import_path.snap
---
source: tests/spec/emit/imports.rs
description: "input: \nimport \"go:github.com/jackc/pgx/v5\"\n\nfn test() {\n  let _ = pgx.TxIsoLevel.Serializable\n}\n"
---
package main

import pgx "github.com/jackc/pgx/v5"

func test() {
	_ = pgx.Serializable
}
