tests/spec/emit/snapshots/tuple_type_alias_preserved_at_use_sites.snap
---
source: tests/spec/emit/types.rs
description: "\ntype Pair = (int, int)\n\nstruct Holder { p: Pair }\n\nfn use_it(h: Holder, x: Pair) -> int { h.p.0 + x.1 }\n"
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Pair = lisette.Tuple2[int, int]

type Holder struct {
	p Pair
}

func use_it(h Holder, x Pair) int {
	return h.p.First + x.Second
}
