tests/spec/emit/snapshots/unannotated_recursion_unchanged_by_tailcall_pass.snap
---
source: tests/spec/emit/functions.rs
assertion_line: 1773
description: "input: \nfn factorial(n: int, acc: int) -> int {\n  if n <= 1 { acc } else { factorial(n - 1, acc * n) }\n}\n"
---
package main

func factorial(n, acc int) int {
	if n <= 1 {
		return acc
	}
	return factorial(n-1, acc*n)
}
